# Picotron_Tiny_Qwen2_PreT

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/data/: c4_en_2b.yaml
configs/experiments/: qwen2_100m_c4.yaml
configs/model/: qwen2_100m.yaml
configs/train/: overfit.yaml  pretrain_100m.yaml  smoke.yaml
scripts/: load_model_tokenizer.py  prepare_c4.py  run_overfit_test.py  train.py  verify_model_config.py
src/pretraining/: __init__.py
src/pretraining/data/: __init__.py  cleaning.py  dataset.py  packing.py  prepare_c4.py  split.py
src/pretraining/evaluation/: __init__.py
src/pretraining/model/: __init__.py  attention.py  config.py  qwen2.py  rmsnorm.py  rope.py  swiglu.py
src/pretraining/training/: __init__.py  loss.py  optimizer.py  overfit.py  scheduler.py  train.py
tests/: test_data_pipeline.py  test_model.py  test_optimizer.py  test_training.py
